syntax = "proto3";
package dydxprotocol.clob;

import "dydxprotocol/clob/clob_pair.proto";

option go_package = "github.com/dydxprotocol/v4-chain/protocol/x/clob/types";

// ClobStagedFinalizeBlockEvent defines a CLOB event staged during
// FinalizeBlock.
message ClobStagedFinalizeBlockEvent {
  // event is the staged event.
  oneof event {
    // create_clob_pair indicates a new CLOB pair creation.
    ClobPair create_clob_pair = 1;
  }
}
